# hunter

./: .prettierrc  README.md  bun.lockb  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: nightly.yml  publish.yml
.scripts/: mirror-latest-json.js
docs/images/: app.avif  downloading.avif
src/: App.scss  App.tsx  index.scss  index.tsx  lazy.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  consts.rs  error.rs  global.rs  lib.rs  linux.rs  logger.rs  main.rs  node.rs  proxy.rs  run_event.rs  setup.rs  tray.rs  update.rs
src-tauri/src/config/: config.rs  log_level.rs  mod.rs  node.rs  trojan.rs
src-tauri/src/utils/: download.rs  execute.rs  fs.rs  mod.rs  unzip.rs
src/advance/: index.tsx
src/app/: autostart.tsx  checking.tsx  context.ts  daemon.tsx  darkSwitch.tsx  download.tsx  local-addr.tsx  local-port.tsx  log-level.tsx  pac.tsx  serverNodesTable.tsx  serverNodesTableFooter.tsx
src/app/hooks/: useDark.tsx
src/app/table/: cell.tsx  editable-row.tsx  index.scss  index.tsx  interface.ts
src/components/: index.scss  index.ts  interface.ts
src/components/alert/: index.tsx
src/components/button/: index.tsx
src/components/col/: index.tsx
src/components/flex/: index.tsx
src/components/input/: index.tsx
src/components/input-number/: index.tsx
src/components/progress/: circle.tsx  index.tsx
src/components/row/: index.tsx
src/components/space/: compact.tsx  index.tsx
src/components/spinner/: index.tsx
src/components/switch/: index.tsx
src/components/tooltip/: index.tsx
src/lib/: api.ts  event.ts  index.ts  notify.ts  proxy.ts
types/: component.d.ts  config.d.ts  event.d.ts  index.d.ts  node.d.ts  proxy.d.ts  zip.d.ts
