[package]
name = "hunter"
version = "0.0.0"
description = "trojan 图形化客户端"
authors = ["thepoy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "notification-all",
  "dialog-confirm",
  "updater",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "stream",
  "socks",
  "rustls-tls",
] }
tokio = { version = "1", features = ["fs", "process", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
thiserror = "1"
lazy_static = "1"
url = "2"
percent-encoding = "2"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ['formatting', 'local-offset'] }
zip = '0.6'
toml = "0.8"
sysinfo = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
windows-registry = "0.1.0"
windows-result="0.1.0"
encoding = "0.2.33"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
