[package]
name = "hunter"
version = "0.1.0"
description = "trojan 图形化客户端"
authors = ["thepoy"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "hunter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "socks",
  "rustls-tls",
] }
tokio = { version = "1", features = ["fs", "process", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
thiserror = "1"
lazy_static = "1"
url = "2"
percent-encoding = "2"
zip = '2'
toml = "0"
sysinfo = "0"
time = { version = "0.3", features = ['macros'] }
tracing-subscriber = { version = "0.3", features = [
  'time',
  'env-filter',
  'json',
] }
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-appender = '0.2'
window-vibrancy = "0"

tauri-plugin-single-instance = { version = "2.0.0-rc" }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"

[target.'cfg(target_os = "macos")'.dependencies]
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase"] }
windows-registry = "0"
windows-result = "0"
encoding = "0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
